--- a/manifest.json
+++ b/manifest.json
@@ -4,10 +4,9 @@
   "version": "0.0.1",
   "manifest_version": 2,
   "description": "Assortment of tools for University of Cincinnati's Catalyst System",
-  "homepage_url": "http://extensionizr.com",
+  "homepage_url": "https://github.com/isiah-lloyd/Katal",
   "icons": {
     "16": "icons/icon16.png",
-    "48": "icons/icon48.png",
     "128": "icons/icon128.png"
   },
   "permissions": [
